# typescript-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
crates/ts-cli/: Cargo.toml
crates/ts-cli/src/: baseline_test_cli.rs  main.rs
crates/ts-core/: Cargo.toml
crates/ts-core/benches/: lexer_bench.rs
crates/ts-core/src/: ast.rs  baseline_test.rs  codegen.rs  diagnostics.rs  lib.rs  parser.rs  symbols.rs  types.rs
crates/ts-core/src/lexer/: keywords.rs  lexer.rs  mod.rs  scanner.rs  token.rs
crates/ts-core/src/utils/: intern.rs  mod.rs  source.rs  span.rs
crates/ts-lsp/: Cargo.toml
crates/ts-lsp/src/: main.rs
crates/ts-wasm/: Cargo.toml
crates/ts-wasm/src/: lib.rs
scripts/: build-extension.sh  build-wasm.sh  setup.sh
