[package]
name = "ts-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for TypeScript compiler"

[[bin]]
name = "ts-cli"
path = "src/main.rs"

[dependencies]
ts-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
colored = "2.0"