[package]
name = "ts-core"
version = "0.1.0"
edition = "2021"
description = "Core TypeScript compiler implementation in Rust"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
string-interner = { workspace = true }
indexmap = { workspace = true }
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexer_bench"
harness = false