[package]
name = "ts-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for TypeScript"

[[bin]]
name = "ts-lsp"
path = "src/main.rs"

[dependencies]
ts-core = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
clap = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"