[package]
name = "ts-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for TypeScript compiler"

[lib]
crate-type = ["cdylib"]

[dependencies]
ts-core = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Worker",
  "MessageEvent",
  "DedicatedWorkerGlobalScope"
]